# Math

./: .gitmodules  CMakeLists.txt  README.md
Include/Math/: Angle.h  BoundingBox.h  Definitions.h  Degree.h  Dimension2D.h  Matrix4x4.h  Plane.h  Point2D.h  Point3D.h  Radian.h  Ray2D.h  Ray3D.h  Utility.h  Vector2D.h  Vector3D.h
Include/Math/Detail/: Angle.inl  BoundingBox.inl  Degree.inl  Dimension2D.inl  Matrix4x4.inl  Plane.inl  Point2D.inl  Point3D.inl  Radian.inl  Ray2D.inl  Ray3D.inl  Vector2D.inl  Vector3D.inl
Source/: CMakeLists.txt  Matrix4x4.cpp
